refactor: Rewrite tests