@@ -5,18 +5,13 @@ import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import com.amazonaws.services.sqs.model.BatchResultErrorEntry;
-import com.amazonaws.services.sqs.model.SendMessageBatchRequest;
-import com.amazonaws.services.sqs.model.SendMessageBatchRequestEntry;
-import com.amazonaws.services.sqs.model.SendMessageBatchResult;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 import no.unit.nva.commons.json.JsonUtils;
-import no.unit.nva.cristin.FakeAmazonSQS;
 import no.unit.nva.events.models.EventReference;
+import no.unit.nva.cristin.utils.FakeSqsClient;
 import no.unit.nva.s3.S3Driver;
 import no.unit.nva.stubs.FakeContext;
 import no.unit.nva.stubs.FakeS3Client;
@@ -27,6 +22,10 @@ import nva.commons.core.paths.UriWrapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import software.amazon.awssdk.services.s3.model.NoSuchKeyException;
+import software.amazon.awssdk.services.sqs.model.BatchResultErrorEntry;
+import software.amazon.awssdk.services.sqs.model.SendMessageBatchRequest;
+import software.amazon.awssdk.services.sqs.model.SendMessageBatchRequestEntry;
+import software.amazon.awssdk.services.sqs.model.SendMessageBatchResponse;
 
 class CristinRerunEventEmitterTest {
 
@@ -34,7 +33,7 @@ class CristinRerunEventEmitterTest {
     public static final String CRISTIN_ENTRY_LOCATION = "s3://cristin-import-884807050265/cristinEntries/2024-04"
                                                         + "-19T12:08:24.244309343Z/19843994-c259-4ca8-9143"
                                                         + "-786739318a97.gz";
-    private FakeAmazonSQS sqsClient;
+    private FakeSqsClient sqsClient;
     private FakeS3Client s3Client;
     private CristinRerunErrorsEventEmitter handler;
     private S3Driver s3Driver;
@@ -44,7 +43,7 @@ class CristinRerunEventEmitterTest {
     void init() {
         this.s3Client = new FakeS3Client();
         this.s3Driver = new S3Driver(s3Client, "ignored");
-        this.sqsClient = new FakeAmazonSQS();
+        this.sqsClient = new FakeSqsClient();
         this.output = new ByteArrayOutputStream();
         this.handler = new CristinRerunErrorsEventEmitter(s3Client, sqsClient);
     }
@@ -101,7 +100,7 @@ class CristinRerunEventEmitterTest {
                                  .addChild("nullpointer");
         var errorReport = errorsLocation.addChild("12345").toS3bucketPath();
         var failure = getFailure(CRISTIN_ENTRY_LOCATION);
-        sqsClient = amazonSqsThatFailsToSendMessages();
+        sqsClient = sqsClientThatFailsToSendMessages();
         s3Driver.insertFile(errorReport, failure);
         var errorLocation = URI.create(errorsLocation.toString());
         var input = IoUtils.stringToStream(new RerunFailedEntriesEvent(errorLocation).toJsonString());
@@ -125,24 +124,24 @@ class CristinRerunEventEmitterTest {
             """.replace("CRISTIN_ENTRY_LOCATION", cristinEntryLocation);
     }
 
-    private FakeAmazonSQS amazonSqsThatFailsToSendMessages() {
-        return new FakeAmazonSQS() {
+    private FakeSqsClient sqsClientThatFailsToSendMessages() {
+        return new FakeSqsClient() {
             @Override
-            public SendMessageBatchResult sendMessageBatch(SendMessageBatchRequest sendMessageBatchRequest) {
-                var result = new SendMessageBatchResult();
-                result.setFailed(
-                    sendMessageBatchRequest.getEntries().stream().map(entry -> createFailedResult(entry)).collect(
-                        Collectors.toList()));
-                result.setSuccessful(List.of());
-                return result;
+            public SendMessageBatchResponse sendMessageBatch(SendMessageBatchRequest sendMessageBatchRequest) {
+                return SendMessageBatchResponse.builder()
+                           .failed(sendMessageBatchRequest.entries().stream()
+                                       .map(this::createFailedResult)
+                                       .toList())
+                           .successful(List.of())
+                           .build();
+            }
+
+            private BatchResultErrorEntry createFailedResult(SendMessageBatchRequestEntry entry) {
+                return BatchResultErrorEntry.builder()
+                           .id(entry.id())
+                           .message("Failed miserably")
+                           .build();
             }
         };
-    }
-
-    private BatchResultErrorEntry createFailedResult(SendMessageBatchRequestEntry entry) {
-        var resultEntry = new BatchResultErrorEntry();
-        resultEntry.setId(entry.getId());
-        resultEntry.setMessage("Failed miserably");
-        return resultEntry;
     }
 }
